--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Room</title>
   <!-- <link rel="stylesheet" href="whatever-you-want.css"> -->
   <script src="room.js"></script>
 </head>
+
 <body>
-  <script>var app = Elm.Main.init();</script>
+  <script>var app = Elm.Room.init();</script>
 </body>
+
 </html>
