--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Room</title>
-  <!-- <link rel="stylesheet" href="whatever-you-want.css"> -->
+  <link rel="stylesheet" href="roomstyles.css">
   <script src="room.js"></script>
 </head>
 
