frontend page routing

--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
   <meta charset="UTF-8">
-  <title>Room</title>
-  <link rel="stylesheet" href="roomstyles.css">
-  <script src="room.js"></script>
-  <script src="ports.websocket.js"></script>
+  <title>ThirdPlace Login</title>
+  <link rel="stylesheet" href="loginstyles.css">
+  <script src="login.js"></script>
 </head>
-
 <body>
   <script>
-    var app = Elm.Room.init();
-    initSockets(app);
+    var app = Elm.Login.init();
   </script>
 </body>
-
 </html>
