--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>ThirdPlace Login</title>
   <link rel="stylesheet" href="loginstyles.css">
   <script src="login.js"></script>
+  <script type="module" src="libp2p-identity.js"></script>
 </head>
+
 <body>
   <script>
     var app = Elm.Login.init();
   </script>
 </body>
+
 </html>
