--- a/tp-frontend/room.html
+++ b/tp-frontend/room.html
@@ -11,7 +11,7 @@
 
 <body>
   <script>
-    var app = Elm.Room.init();
+    var app = Elm.RoomPage.init();
     initSockets(app);
   </script>
 </body>
