--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <title>ThirdPlace Login</title>
   <link rel="stylesheet" href="loginstyles.css">
-  <script src="login.js"></script>
+  <link rel="stylesheet" href="roomstyles.css">
+  <script src="tpapp.js"></script>
   <script type="module" src="libp2p-identity.js"></script>
 </head>
 
 <body>
   <script>
-    var app = Elm.LoginPage.init();
+    var app = Elm.ThirdPlaceApp.init();
   </script>
 </body>
 
