conversations panel + favicon + flexboxing

--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>ThirdPlace Login</title>
-  <link rel="stylesheet" href="loginstyles.css">
-  <link rel="stylesheet" href="roomstyles.css">
+  <link rel="stylesheet" href="stylesheets/thirdplace.css">
+  <link rel="stylesheet" href="stylesheets/loginstyles.css">
+  <link rel="stylesheet" href="stylesheets/roomstyles.css">
+  <link rel="stylesheet" href="stylesheets/conversations.css">
   <script src="tpapp.js"></script>
   <script type="module" src="libp2p-identity.js"></script>
 </head>
