--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="stylesheets/roomstyles.css">
   <link rel="stylesheet" href="stylesheets/conversations.css">
   <script src="tpapp.js"></script>
-  <script type="module" src="libp2p-identity.js"></script>
+  <script type="module" src="src/JSPorts/Identity/libp2p-identity.js"></script>
 </head>
 
 <body>
