--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -15,10 +15,10 @@
 
 <body>
   <script type="module">
-    import './src/JSPorts/Sporran/sporran.js';
+    import {setupSporranPorts} from './src/JSPorts/Sporran/sporran.js';
     import {setupIdentityPorts } from './src/JSPorts/Identity/libp2p-identity.js'
     var app = Elm.ThirdPlaceApp.init({node: document.getElementById('app')});
-    //setupSporranPorts(app);
+    setupSporranPorts(app);
     setupIdentityPorts(app);
   </script>
 </body>
