--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="stylesheets/loginstyles.css">
   <link rel="stylesheet" href="stylesheets/roomstyles.css">
   <link rel="stylesheet" href="stylesheets/conversations.css">
+  <link rel="stylesheet" href="stylesheets/chatpanelstyles.css">
   <script src="tpapp.js"></script>
   <script type="module" src="src/JSPorts/Identity/libp2p-identity.js"></script>
   <script type="module" src="src/JSPorts/Sporran/sporran.js"></script>
