sending msgs start

--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -13,6 +13,7 @@
   <script type="module" src="src/JSPorts/Identity/libp2p-identity.js"></script>
   <script type="module" src="src/JSPorts/Sporran/sporran.js"></script>
   <script type="module" src="src/JSPorts/Geohash/geohash-room.js"></script>
+  <script type="module" src="src/JSPorts/RoomPubsub/room-pubsub.js"></script>
 </head>
 
 <body>
@@ -20,10 +21,12 @@
     import {setupSporranPorts} from './src/JSPorts/Sporran/sporran.js';
     import {setupIdentityPorts } from './src/JSPorts/Identity/libp2p-identity.js'
     import {setupRoomPorts} from './src/JSPorts/Geohash/geohash-room.js'
+    import {setupRoomPubSubPorts} from './src/JSPorts/RoomPubsub/room-pubsub.js'
     var app = Elm.ThirdPlaceApp.init({node: document.getElementById('app')});
     setupSporranPorts(app);
     setupIdentityPorts(app);
-    setupRoomPorts(app)
+    setupRoomPorts(app);
+    setupRoomPubSubPorts(app);
   </script>
 </body>
 
