typescript conversion comp[ete

--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -10,10 +10,6 @@
   <link rel="stylesheet" href="stylesheets/conversationstyles.css">
   <link rel="stylesheet" href="stylesheets/chatpanelstyles.css">
   <script src="tpapp.js"></script>
-  <script type="module" src="src/JSPorts/Identity/libp2p-identity.js"></script>
-  <script type="module" src="src/JSPorts/Sporran/sporran.js"></script>
-  <script type="module" src="src/JSPorts/Geohash/geohash-room.js"></script>
-  <script type="module" src="src/JSPorts/RoomPubsub/room-pubsub.js"></script>
 </head>
 
 <body>
@@ -23,7 +19,7 @@
   <script src="tpapp.js"></script>
 
   <!-- 2) TS entrypoint as an ES module -->
-  <script type="module" src="dist/index.js"></script>
+  <script type="module" src="src/index.ts"></script>
 </body>
 
 </html>
