--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -9,6 +9,6 @@
 <body>
     <div id="app"></div>
     <script src="main.js"></script>
-    <script src="tpapp.js"></script>
+    <script type="module" src="tpapp.js"></script>
 </body>
 </html>
