--- a/tp-frontend/index.html
+++ b/tp-frontend/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThirdPlace</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
     <div id="app"></div>
-    <script src="main.js"></script>
-    <script type="module" src="tpapp.js"></script>
+    <script src="./app.js"></script>
+    <script>
+        // Initialize your Elm application
+        var app = Elm.Main.init(); 
+    </script>
 </body>
 </html>
